# notes-manager

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  init.sql  pyproject.toml
.github/workflows/: deploy.yml
docs/: api-permissions.md  aws-setup.md  local-setup.md  project-structure.md
makefiles/: app.mk  test.mk  utils.mk
postman/: collection.json  environment_ec2.json  environment_localhost.json
src/notes_manager/: config.py  database.py  main.py
src/notes_manager/dependencies/: auth.py  database.py
src/notes_manager/models/: __init__.py  article.py  user.py
src/notes_manager/repositories/: article_repository.py  user_repository.py
src/notes_manager/routers/: article_router.py  auth_router.py  user_router.py
src/notes_manager/schemas/: article.py  auth.py  user.py
src/notes_manager/services/: article_service.py  auth_service.py  user_service.py
tests/: conftest.py  test_liveness.py
tests/unit/: test_articles.py  test_auth.py  test_liveness.py  test_users.py
